--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,10 @@
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="SpotifyStreamer">Spotify Streamer</string>
+    <string name="ScoresApp">Scores App</string>
+    <string name="LibraryApp">Library App</string>
+    <string name="BuildItBigger">Build It Bigger</string>
+    <string name="XYZReader">XYZ Reader</string>
+    <string name="Capstone">Capstone</string>
 </resources>
